# efficientvit.mojo

./: .gitignore  Dockerfile  Makefile  README.md  act.mojo  checkpoints.mojo  efficientvit.mojo  export.py  inference.py  layers.mojo  main.mojo  pyproject.toml  tests.mojo  transforms.py
.github/workflows/: ci.yaml
_/: b0.txt  b1.txt  b2.txt  b3.txt
interop/: transforms.py
shared/: act.mojo  imagenet.mojo  images.mojo  modules.mojo  pointers.mojo  strings.mojo  tensors.mojo
